syntax = "proto3";

//general types

message Box {
    double x1 = 1;
    double y1 = 2;
    double x2 = 3;
    double y2 = 4;
}

enum Tool {
    ANALYSIS = 0;
    BACKWARDS = 1;
    CLAPPING = 2;
    CLAPPING_MEMORIZED = 3;
    CONDUCT = 4;
    COUNT_OUT_LOUD = 5;
    GHOSTING = 6;
    LOOP = 7;
    METRONOME = 8;
    RADIO = 9;
    RHYTHMS = 10;
    SING = 11;
    SLOW = 12;
    TAPPING = 13;
    TRANSPOSITION = 14;
}

//piece data

message Piece {
    string id = 1;
    string name = 2;
    string author = 3;

    repeated Page pages = 4;
}

//measure data

message Row {
    float offset = 1;
    float thickness = 2;
    repeated float lines = 3;
}

message Measures {
    Box bounds = 1;
    repeated Row rows = 2;
}

//practice data

message Page {
    bytes image = 1;
    repeated Section sections = 2;
    Measures measures = 3;
}

message Section {
    int32 from = 1;
    int32 to = 2;
    repeated Task tasks = 3;
}

message Task {
    repeated Tool tools = 1;
    TaskState state = 2;
}

//task state variants

message SingleState {
    repeated bool completed = 1;
    int32 number = 2;
}

message HandsSeparate {
    repeated bool right = 1;
    repeated bool left = 2;
    int32 number = 3;
}

message TaskState {
    oneof hands {
        SingleState handsTogether = 1;
        HandsSeparate handsSeparate = 2;
    }

    optional SingleState eyesClosed = 3;
    optional SingleState memorized = 4;
}
